--- a/Images/Images/Storyboard/Base.lproj/Main.storyboard
+++ b/Images/Images/Storyboard/Base.lproj/Main.storyboard
@@ -13,7 +13,8 @@
         <scene sceneID="mzv-ts-vYz">
             <objects>
                 <tabBarController id="VsQ-xI-R4a" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ptJ-qQ-9u3">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="ptJ-qQ-9u3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
