--- a/Images/Images/Storyboard/ImageViewController.storyboard
+++ b/Images/Images/Storyboard/ImageViewController.storyboard
@@ -15,18 +15,18 @@
             <objects>
                 <viewController id="ZaQ-Wu-06e" customClass="ImagesViewController" customModule="Images" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="umi-wv-8HL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6cP-V6-eD9">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="243.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="286"/>
                                 <subviews>
                                     <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space" translatesAutoresizingMaskIntoConstraints="NO" id="UOq-Bq-Ha5">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="243.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="286"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIE-UK-YMh">
-                                        <rect key="frame" x="0.0" y="64" width="320" height="171.5"/>
+                                        <rect key="frame" x="0.0" y="64" width="375" height="214"/>
                                         <connections>
                                             <segue destination="4K1-Xf-mDH" kind="embed" id="md0-Rh-SFc"/>
                                         </connections>
@@ -43,23 +43,23 @@
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="j0g-xs-tP2">
-                                <rect key="frame" x="140" y="20" width="40" height="40"/>
+                                <rect key="frame" x="167.5" y="20" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="8L8-qv-mrP"/>
                                     <constraint firstAttribute="height" constant="40" id="nuW-qU-X3S"/>
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H1M-TR-gbN">
-                                <rect key="frame" x="0.0" y="243.5" width="320" height="275.5"/>
+                                <rect key="frame" x="0.0" y="286" width="375" height="332"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="imageCell" id="Mez-D4-cma" customClass="ImageTableViewCell" customModule="Images" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mez-D4-cma" id="9vQ-eJ-ryI">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KJq-aJ-9ft">
@@ -107,7 +107,7 @@
                                 </connections>
                             </tableView>
                             <view hidden="YES" alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9c9-WG-hgN">
-                                <rect key="frame" x="0.0" y="20" width="320" height="223.5"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="266"/>
                                 <color key="backgroundColor" red="0.22102877500000001" green="0.76200133560000005" blue="0.84233474730000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
@@ -116,7 +116,6 @@
                             <constraint firstItem="H1M-TR-gbN" firstAttribute="top" secondItem="9c9-WG-hgN" secondAttribute="bottom" id="1mX-Ag-kLB"/>
                             <constraint firstItem="H1M-TR-gbN" firstAttribute="top" secondItem="6cP-V6-eD9" secondAttribute="bottom" id="7y8-k5-7l7"/>
                             <constraint firstItem="KH4-IR-CVc" firstAttribute="trailing" secondItem="H1M-TR-gbN" secondAttribute="trailing" id="8Hs-PB-dK6"/>
-                            <constraint firstItem="KH4-IR-CVc" firstAttribute="bottom" secondItem="H1M-TR-gbN" secondAttribute="bottom" id="9J8-AP-Gao"/>
                             <constraint firstItem="H1M-TR-gbN" firstAttribute="leading" secondItem="KH4-IR-CVc" secondAttribute="leading" id="Hac-Ln-fUr"/>
                             <constraint firstItem="6cP-V6-eD9" firstAttribute="width" secondItem="umi-wv-8HL" secondAttribute="width" id="Jhx-9Q-O2h"/>
                             <constraint firstItem="j0g-xs-tP2" firstAttribute="centerX" secondItem="KH4-IR-CVc" secondAttribute="centerX" id="LQd-lk-YfH"/>
@@ -129,12 +128,12 @@
                             <constraint firstItem="6cP-V6-eD9" firstAttribute="trailing" secondItem="KH4-IR-CVc" secondAttribute="trailing" id="hv1-qs-MPE"/>
                             <constraint firstItem="9c9-WG-hgN" firstAttribute="trailing" secondItem="KH4-IR-CVc" secondAttribute="trailing" id="wQ4-6u-Fj1"/>
                             <constraint firstItem="9c9-WG-hgN" firstAttribute="top" secondItem="KH4-IR-CVc" secondAttribute="top" id="xUa-eO-zdB"/>
+                            <constraint firstItem="KH4-IR-CVc" firstAttribute="bottom" secondItem="H1M-TR-gbN" secondAttribute="bottom" id="zLZ-hF-FGC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KH4-IR-CVc"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="more" id="BSE-e8-cd4"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <size key="freeformSize" width="320" height="568"/>
                     <connections>
                         <outlet property="dropZoneView" destination="9c9-WG-hgN" id="0Ae-yf-vfX"/>
                         <outlet property="tableView" destination="H1M-TR-gbN" id="LXr-hm-3HK"/>
